Pagina de login pronta_front-end
tudo do front end da pagina de login já está pronto.

--- a/project/index.css
+++ b/project/index.css
@@ -82,7 +82,7 @@ body {
 }
 
 .btn-black{
-  background-color: #000 !important;
-  color: #fff;
+  background-color: #ecd85f !important;
+  color: rgb(0, 0, 0);
   margin-left: 25px;
 }
