--- a/project/perfil.css
+++ b/project/perfil.css
@@ -1,133 +1,111 @@
-body {
-    background-color: #727272
+body{
+    background:#919090;
+    text-align: center;
 }
-
-.padding {
-    padding: 3rem !important
+.card.user-card {
+    border-top: none;
+    -webkit-box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
+    box-shadow: 0 0 1px 2px rgba(0,0,0,0.05), 0 -2px 1px -2px rgba(0,0,0,0.04), 0 0 0 -1px rgba(0,0,0,0.05);
+    -webkit-transition: all 150ms linear;
+    transition: all 150ms linear;
 }
-
-.user-card-full {
-    overflow: hidden
-}
-
 .card {
-    border-radius: 5px;
-    -webkit-box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
-    box-shadow: 0 1px 20px 0 rgba(69, 90, 100, 0.08);
+    border-radius: 10px;
+    -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(255, 173, 51, 0.16);
+    box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
     border: none;
-    margin-bottom: 10px
+    margin-bottom: 0px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+.card .card-header h5 {
+    margin-bottom: 0;
+    color: #222;
+    font-size: 30px;
+    text-align: center;
+    font-weight: 600;
+    display: inline-block;
+    margin-right: 0px;
+    line-height: 1.4;
 }
 
-.m-r-0 {
-    margin-right: 0px
+.card .card-header+.card-block, .card .card-header+.card-block-big {
+    padding-top: 1;
 }
 
-.m-l-0 {
-    margin-left: 0px
+.user-card .card-block {
+    text-align: center;
 }
 
-.user-card-full .user-profile {
-    border-radius: 5px 0 0 5px
+.card .card-block {
+    padding: 40px;
 }
 
-.bg-c-lite-green {
-    background: -webkit-gradient(linear, left top, right top, from(#f7d567), to(#ee5a6f));
-    background: linear-gradient(to right, #f7c25f, #ffe263)
+.user-card .card-block .user-image {
+    position: relative;
+    margin: 0 auto;
+    display: inline-block;
+    padding: 5px;
+    width: 110px;
+    height: 110px;
 }
 
-.user-profile {
-    padding: 20px 0
-}
-
-.card-block {
-    padding: 1.25rem
-}
-
-.m-b-25 {
-    margin-bottom: 25px
+.user-card .card-block .user-image img {
+    z-index: 20;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+        width: 100px;
+    height: 100px;
 }
 
 .img-radius {
-    border-radius: 5px
-}
-
-h6 {
-    font-size: 14px
-}
-
-.card .card-block p {
-    line-height: 25px
-}
-
-@media only screen and (min-width: 1400px) {
-    p {
-        font-size: 14px
-    }
-}
-
-.card-block {
-    padding: 1.25rem
-}
-
-.b-b-default {
-    border-bottom: 1px solid #000000
-}
-
-.m-b-20 {
-    margin-bottom: 20px
-}
-
-.p-b-5 {
-    padding-bottom: 5px !important
-}
-
-.card .card-block p {
-    line-height: 25px
-}
-
-.m-b-10 {
-    margin-bottom: 10px
-}
-
-.text-muted {
-    color: #000000 !important
-}
-
-.b-b-default {
-    border-bottom: 1px solid #000000
+    border-radius: 60%;
 }
 
 .f-w-600 {
-    font-weight: 600
-}
-
-.m-b-20 {
-    margin-bottom: 20px
-}
-
-.m-t-40 {
-    margin-top: 20px
-}
-
-.p-b-5 {
-    padding-bottom: 5px !important
+    font-weight: 600;
 }
 
 .m-b-10 {
-    margin-bottom: 10px
+    margin-bottom: 10px;
 }
 
-.m-t-40 {
-    margin-top: 20px
+.m-t-25 {
+    margin-top: 10px;
 }
 
-.user-card-full .social-link li {
-    display: inline-block
+.m-t-15 {
+    margin-top: 40%;
 }
 
-.user-card-full .social-link li a {
-    font-size: 20px;
-    margin: 0 10px 0 0;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out
+.card .card-block p {
+    line-height: 1.4;
+}
+
+.text-muted {
+    color: #000000!important;
+}
+
+.user-card .card-block .user-image:before {
+    bottom: 0;
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+}
+
+
+.user-card .card-block .user-image:after {
+    top: 0;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;
+}
+
+.user-card .card-block .user-image:after, .user-card .card-block .user-image:before {
+    content: "";
+    width: 100%;
+    height: 48%;
+    border: 2px solid #f7b968;
+    position: absolute;
+    left: 0;
+    z-index: 10;
 }
