--- a/project/feed.css
+++ b/project/feed.css
@@ -1,11 +1,24 @@
 header{
-    padding-bottom:100px ;
+    padding-bottom:10px ;
+}
+body{
+    background-color: #727272;
 }
 div#caixa{
 padding-left: 180px;
+padding-right:40px ;
 width: 55%;
 float: left;
+
 }
 div#aviso1{
 text-align:left; 
 }
+div#caixa2{
+  
+     width:100%;
+    float: left;
+    
+   
+}
+    
