--- a/project/feed.css
+++ b/project/feed.css
@@ -1,19 +1,28 @@
 header{
     padding-bottom:10px ;
 }
+
 body{
     background-color: #727272;
 }
+
 div#caixa{
 padding-left: 180px;
 padding-right:40px ;
 width: 55%;
 float: left;
-
 }
+
+div#conteinerDoPost{
+    background-color: white;
+    width: 100%;
+    height: 300px;
+}
+
 div#aviso1{
 text-align:left; 
 }
+
 div#caixa2{
   
      width:100%;
@@ -21,10 +30,11 @@ div#caixa2{
     
    
 }
-    div#cpost{
+
+div#cpost{
         padding-left: 180px;
         padding-right:40px ;
         width: 55%;
         float: left;
           
-    }
+}
