--- a/project/index.css
+++ b/project/index.css
@@ -7,6 +7,7 @@ div#containerCarousel{
 
 div#conteinerLogin{
   background-color: #BCC2C8;
+  box-shadow: 2px 1px 8px 2px;
   border-radius: 10px;
   margin-right: 30%;
   padding-bottom: 20px;
