--- a/project/feed.css
+++ b/project/feed.css
@@ -11,8 +11,26 @@ padding-left: 180px;
 padding-right:40px ;
 width: 55%;
 float: left;
+
+
 }
 
+div#caixa2{
+
+border-top-width: 1px;
+border-top-style: solid;
+border-top-color:#8d8c89;
+border-bottom-width: 1px;
+border-bottom-style: solid;
+border-bottom-color:#8d8c89;
+border-right-width: 1px;
+border-right-style: solid;
+border-right-color:#8d8c89;
+border-left-width: 1px;
+border-left-style: solid;
+border-left-color:#8d8c89;
+
+}
 div#conteinerDoPost{
     background-color: white;
     width: 100%;
